--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ importFrom("bnlearn", "hc", "dsep", "score", "vstructs")
 importFrom("doParallel", "registerDoParallel")
 importFrom("foreach", "%dopar%", "foreach")
 importFrom("parallel", "makeCluster", "stopCluster", "detectCores", "parApply", "parLapply", "clusterExport", "parSapply")
-importFrom("igraph", "graph_from_adjacency_matrix", "is_separator", "components", "delete_vertices", "are_adjacent")
+importFrom("graph_from_adjacency_matrix", "is_separator", "components", "delete_vertices", "are_adjacent")
 importFrom("glmnet", "glmnet", "cv.glmnet")
 import(Matrix)
 # importFrom("huge", "huge.npn", "huge", "huge.select")
